Completed structures page and added to all.

--- a/tutorial/bg_info/tutorial_julesrose/jr_advanced.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_advanced.html
@@ -63,6 +63,7 @@ dy>
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_mqrg.html">My Quick Reference Guide</a></li>
+                                <li><a href="jr_structures.html">JULES structures</a></li>
                             </ul>
                         </li>
                     </ul>
