--- a/tutorial/bg_info/tutorial_julesrose/jr_intermediate.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_intermediate.html
@@ -63,6 +63,7 @@ dy>
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_mqrg.html">My Quick Reference Guide</a></li>
+                                <li><a href="jr_structures.html">JULES structures</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -72,7 +73,7 @@ dy>
         </nav>
         <div class="container theme-showcase" role="main">
         <div class="jumbotron">
-            <h1>Intermediate of version control, Subversion and FCM</h1>
+            <h1>Intermediate JULES-Rose Tutorial</h1>
             <p>This aims to explain the importance of:
             <ul>
                 <li><a href="#vc">Using version control</a></li>
