--- a/tutorial/bg_info/tutorial_julesrose/intermediate_quiz.html
+++ b/tutorial/bg_info/tutorial_julesrose/intermediate_quiz.html
@@ -52,6 +52,7 @@
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_mqrg.html">My Quick Reference Guide</a></li>
+                                <li><a href="jr_structures.html">JULES structures</a></li>
                             </ul>
                         </li>
                     </ul>
