--- a/tutorial/bg_info/tutorial_julesrose/jr_glossary.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_glossary.html
@@ -49,6 +49,7 @@
                                 <li class="dropdown-header">Help/info</li>
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_mqrg.html">My Quick Reference Guide</a></li>
+                                <li><a href="jr_structures.html">JULES structures</a></li>
                             </ul>
                         </li>
                     </ul>
