--- a/tutorial/bg_info/tutorial_julesrose/jr_mqrg.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_mqrg.html
@@ -63,6 +63,7 @@
                                 <li class="dropdown-header">Help/info</li>
                                 <li><a href="jr_links.html">Links</a></li>
                                 <li><a href="jr_glossary.html">Glossary List</a></li>
+                                <li><a href="jr_structures.html">JULES structures</a></li>
                             </ul>
                         </li>
                     </ul>
